# TensorCore-ResNet

./: .gitignore  CMakeLists.txt  README.md  conda.requirements.txt  simulator.README.md  sources.cmake  tests.cmake
examples/: gemm.cu  gemm.sass  simple_gemm.cu  simple_gemm.sass
libtorch_test/: CMakeLists.txt  resnet.cpp
pytest/: resnet.py
resnet/: CMakeLists.txt  dataset.cmake  doxygen.cmake  doxygen.conf.in  preprocess.cmake  preprocess.py  resnet_inference.cpp  sources.cmake  tests.cmake
resnet/common/: common.h  cuda_uniqueptr.hpp  data.hpp  dataset.hpp  device_memory.hpp  functional.hpp  functions.h  half.h  mem_cache.h  ops.hpp  reg_file.h  resnet.hpp  sim_common.h  simulator.h  tensor.hpp
resnet/common/functional/: add.hpp  batchnorm.cu  batchnorm.cuh  batchnorm.h  batchnorm.hpp  conv.h  conv2d.hpp  gemm.h  gemm.hpp  im2col.h  linear.h  linear.hpp  macros.h  ops.h  pooling.cuh  pooling.h
resnet/include/: common.h  common.hpp  dataset.hpp  mem_pool.h  ops.hpp  tensor.hpp
resnet/include/functional/: add.hpp  batchnorm.hpp  conv2d.hpp  gemm.hpp  linear.hpp  macros.h  macros.hpp  pool.hpp
resnet/include/modules/: batchnorm.hpp  conv.hpp  linear.hpp  module.hpp  pooling.hpp
resnet/include/simulator/: device_memory.hpp  functions.hpp  half.h  half.hpp  reg_file.hpp  sim_common.h  sim_common.hpp  simulator.h  simulator.hpp
resnet/modules/: batchnorm.cu  batchnorm.hpp  batchnorm_kernel.cu  conv.hpp  linear.hpp  module.hpp  pooling.cu  pooling.hpp  pooling_kernels.cu
resnet/py_utils/: preprocess.py  test_batchnorm.py  test_conv.py  test_dependencies.py  test_im2col.py  test_linear.py  test_pooling.py  utils.py
resnet/python_helpers/: preprocess.py
resnet/src/: batchnorm.cpp  common.cpp  conv.cpp  dataset.cpp  has_malloc_async.cpp  linear.cpp  mem_cache.cpp  mem_pool.cpp  ops.cpp  pooling.cpp  resnet.cpp  resnet_inference.cpp  tensor.cpp
resnet/src/cmake/: has_malloc_async.cpp  has_restrict.cpp  has_restrict.cu
resnet/src/functional/: add.cu  batchnorm.cu  conv.cu  conv2d.cpp  conv2d.cu  fp16_array.cu  gemm.cu  gemm_helpers.cu  im2col.cu  linear.cu  ops.cu  pooling.cu
resnet/src/modules/: batchnorm.cpp  conv.cpp  linear.cpp  pooling.cpp  resnet.cpp
resnet/src/python_helpers/: preprocess.py  test_dependencies.py
resnet/src/simulator/: functions.cpp  gemm.cpp  half.cpp  reg_file.cpp  simulator.cpp
resnet/tests/: conv2d.cpp  gemm.cpp  gemm.cu  im2col.cpp  im2col.cu  linear.cpp  mem_pool.cpp  resnet.cpp  tensor_conv2d.cpp  test_batchnorm.cpp  test_batchnorm.cu  test_conv.cpp  test_cuda_reduction.cu  test_dataset.cpp  test_gemm.cpp  test_im2col.cpp  test_init.cpp  test_init.cu  test_linear.cpp  test_mem_cache.cpp  test_pooling.cpp  test_pooling.cu  test_tensor.cpp  test_tensor_ops.cpp
resnet/tests/functional/: conv2d.cpp  gemm.cpp  im2col.cpp
resnet/tests/modules/: batchnorm.cpp  conv.cpp  linear.cpp  resnet.cpp  test_pooling.cpp
resnet/tests/simulator/: test_device_memory.cpp  test_functions.cpp  test_half.cpp  test_regfile.cpp  test_simulator.cpp
src/: common.h  device_memory.hpp  functions.cpp  functions.h  functions.hpp  half.cpp  half.h  half.hpp  preg_file.hpp  reg_file.h  reg_file.hpp  simulator.cpp  simulator.h  simulator.hpp
tests/: test_device_memory.cpp  test_functions.cpp  test_half.cpp  test_regfile.cpp  test_simulator.cpp
